API for spy in the format doReturn(...).when(spy).method(...)